Switched to JRE 21 and removed outdated methods